--- a/dev/web/src/sass/hidari-kikino-eren/_style.scss
+++ b/dev/web/src/sass/hidari-kikino-eren/_style.scss
@@ -725,10 +725,6 @@
 			}
 		}
 
-		&_descLine.mod-aiueo　{
-			display: none !important;
-		}
-
 		$type: 1;
 		$delay: 0.3;
 		$delayAfter: 0.5;
@@ -742,6 +738,13 @@
 			$type: $type + 1;
 			$delay: $delay + 0.1;
 			$delayAfter: $delayAfter + 0.1;
+		}
+
+		.lp-summery_descLine:last-of-type {
+			transition-delay: 1.1s;
+			&:after {
+				transition-delay: 1.3s;
+			}
 		}
 
 		&_relationship {
@@ -774,6 +777,7 @@
 			}
 		}
 	}
+
 
 /* ------------------
 		lp-story
@@ -1246,6 +1250,14 @@
 						transition-delay: .4s;
 					}
 				}
+				&:last-of-type {
+					transition-delay: .1s!important;
+					&:after {
+						@include textFadeIN;
+						background-color: #e50013;
+						transition-delay: .3s!important;
+					}
+				}
 			}
 			&_inner img {
 				display: block;
@@ -1293,17 +1305,8 @@
 			}
 
 			&_line:after {
-				content: "";
-				position: absolute;
-				left: 0;
-				top: 0;
-				width: 100%;
-				height: 100%;
+				@include textFadeIN;
 				background-color: #e50013;
-				z-index: -1;
-				transform: scaleX(1);
-				transform-origin: right bottom;
-				transition: transform .6s cubic-bezier(.19,1,.22,1);
 			}
 		}
 
@@ -1311,6 +1314,21 @@
 		$delay: 0.7;
 		$delayAfter: 0.9;
 		@while $type <= 5 {
+			.lp-resultDesc_line:nth-of-type(#{$type}) {
+				transition-delay: #{$delay}s;
+				&:after {
+					transition-delay: #{$delayAfter}s;
+				}
+			}
+			$type: $type + 1;
+			$delay: $delay + 0.1;
+			$delayAfter: $delayAfter + 0.1;
+		}
+
+		$type: 6;
+		$delay: 0.5;
+		$delayAfter: 0.7;
+		@while $type <= 8 {
 			.lp-resultDesc_line:nth-of-type(#{$type}) {
 				transition-delay: #{$delay}s;
 				&:after {
@@ -1392,12 +1410,15 @@
 				backface-visibility: hidden;
 				@include mediaQuery {
 					height: 5.10417vw;
+					transition-delay: 1.3s;
 				}
 				&:after {
-					transform: scaleX(1);
-					transform-origin: right bottom;
-					transition: transform .6s cubic-bezier(.19,1,.22,1);
+					@include textFadeIN;
 					transition-delay: 1.9s;
+					background-color: #e50013;
+					@include mediaQuery {
+						transition-delay: 1.5s;
+					}
 				}
 			}
 
@@ -1412,12 +1433,15 @@
 				backface-visibility: hidden;
 				@include mediaQuery {
 					height: 9.58333vw;
+					transition-delay: 1.4s;
 				}
 				&:after {
-					transform: scaleX(1);
-					transform-origin: right bottom;
-					transition: transform .6s cubic-bezier(.19,1,.22,1);
-					transition-delay: 2s;
+					@include textFadeIN;
+					transition-delay: 1.9s;
+					background-color: #e50013;
+					@include mediaQuery {
+						transition-delay: 1.6s;
+					}
 				}
 			}
 
