--- a/dev/web/asset/css/hidari-kikino-eren/index.css
+++ b/dev/web/asset/css/hidari-kikino-eren/index.css
@@ -361,6 +361,9 @@ input, select {
         .tab_inner:hover:before, .tab_inner:hover:after {
           -webkit-transform: scaleX(1);
           transform: scaleX(1); } }
+    @media screen and (min-width: 1600px) {
+      .tab_inner {
+        border-width: 1.11111px; } }
     .tab_inner > span {
       color: #fff;
       -webkit-transform: scaleX(0.85);
@@ -396,6 +399,11 @@ input, select {
           left: .69444vw;
           width: 1.38889vw;
           height: .79861vw; } }
+      @media screen and (min-width: 1600px) {
+        .tab_inner > svg {
+          left: 11.11111px;
+          width: 22.22222px;
+          height: 12.77778px; } }
 
 .hidarikikinoEren {
   position: relative;
@@ -449,6 +457,11 @@ input, select {
           top: 9.13194vw;
           width: 98.33333vw;
           height: 40.69444vw; } }
+      @media screen and (min-width: 1600px) {
+        .hidarikikinoEren .lp-loading_wrap {
+          top: 146.11111px;
+          width: 1573.33333px;
+          height: 651.11111px; } }
     .hidarikikinoEren .lp-loading_text {
       position: absolute;
       left: 0;
@@ -469,6 +482,10 @@ input, select {
           transform: translateY(400%);
           width: 7.43056vw;
           height: .69444vw; } }
+      @media screen and (min-width: 1600px) {
+        .hidarikikinoEren .lp-loading_text {
+          width: 118.88889px;
+          height: 11.11111px; } }
   .hidarikikinoEren .lp-loadingInner {
     position: absolute;
     left: 0;
@@ -514,6 +531,11 @@ input, select {
         transition-delay: 0s;
         -webkit-transform: scaleY(0.006);
         transform: scaleY(0.006); }
+      @media screen and (min-width: 800px) {
+        .hidarikikinoEren .lp-loadingInner .mod-item1 {
+          -webkit-box-ordinal-group: 2;
+          -ms-flex-order: 1;
+          order: 1; } }
     .hidarikikinoEren .lp-loadingInner .mod-item2 {
       -webkit-box-ordinal-group: 4;
       -ms-flex-order: 3;
@@ -528,8 +550,43 @@ input, select {
         transition-delay: .2s;
         -webkit-transform: scaleY(0);
         transform: scaleY(0); }
-    .hidarikikinoEren .lp-loadingInner .mod-item3 {
-      display: none; }
+      @media screen and (min-width: 800px) {
+        .hidarikikinoEren .lp-loadingInner .mod-item2 {
+          -webkit-box-ordinal-group: 3;
+          -ms-flex-order: 2;
+          order: 2;
+          -webkit-transform: scaleX(0);
+          transform: scaleX(0); }
+          .hidarikikinoEren .lp-loadingInner .mod-item2:before {
+            -webkit-transform: scaleY(0.005);
+            transform: scaleY(0.005);
+            -webkit-transition-delay: .1s;
+            transition-delay: .1s; } }
+    @media screen and (max-width: 799px) {
+      .hidarikikinoEren .lp-loadingInner .mod-item3 {
+        display: none; } }
+    .hidarikikinoEren .lp-loadingInner .mod-item3:before {
+      content: "";
+      display: block;
+      width: 100%;
+      height: 100%;
+      background-color: #deff00;
+      -webkit-transition-delay: .2s;
+      transition-delay: .2s;
+      -webkit-transform: scaleY(0);
+      transform: scaleY(0); }
+    @media screen and (min-width: 800px) {
+      .hidarikikinoEren .lp-loadingInner .mod-item3 {
+        -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+        order: 3;
+        -webkit-transform: scaleX(0);
+        transform: scaleX(0); }
+        .hidarikikinoEren .lp-loadingInner .mod-item3:before {
+          -webkit-transform: scaleY(0.005);
+          transform: scaleY(0.005);
+          -webkit-transition-delay: .2s;
+          transition-delay: .2s; } }
     .hidarikikinoEren .lp-loadingInner .mod-item4 {
       -webkit-box-ordinal-group: 2;
       -ms-flex-order: 1;
@@ -544,6 +601,18 @@ input, select {
         transition-delay: .2s;
         -webkit-transform: scaleY(0);
         transform: scaleY(0); }
+      @media screen and (min-width: 800px) {
+        .hidarikikinoEren .lp-loadingInner .mod-item4 {
+          -webkit-box-ordinal-group: 5;
+          -ms-flex-order: 4;
+          order: 4;
+          -webkit-transform: scaleX(0);
+          transform: scaleX(0); }
+          .hidarikikinoEren .lp-loadingInner .mod-item4:before {
+            -webkit-transform: scaleY(0.005);
+            transform: scaleY(0.005);
+            -webkit-transition-delay: .3s;
+            transition-delay: .3s; } }
   .hidarikikinoEren .lp-header {
     width: 100%;
     background-color: #fff;
@@ -561,6 +630,9 @@ input, select {
     @media screen and (min-width: 800px) {
       .hidarikikinoEren .lp-header {
         height: 4.0625vw; } }
+    @media screen and (min-width: 1600px) {
+      .hidarikikinoEren .lp-header {
+        height: 65px; } }
   .hidarikikinoEren .lp-headerTicker {
     background-image: url("../../../data/hidari-kikino-eren/images/header_ticker.png");
     background-repeat: repeat-x;
@@ -574,6 +646,11 @@ input, select {
         background-size: 16.80556vw 4.0625vw;
         -webkit-animation: headerMovingL 6s linear infinite;
         animation: headerMovingL 6s linear infinite; } }
+    @media screen and (min-width: 1600px) {
+      .hidarikikinoEren .lp-headerTicker {
+        background-size: 268.88889px 65px;
+        -webkit-animation: headerMovingLL 6s linear infinite;
+        animation: headerMovingLL 6s linear infinite; } }
 
 @-webkit-keyframes headerMovingS {
   0% {
@@ -811,16 +888,28 @@ input, select {
     @media screen and (min-width: 800px) {
       .hidarikikinoEren main {
         padding-top: 4.0625vw; } }
+    @media screen and (min-width: 1600px) {
+      .hidarikikinoEren main {
+        padding-top: 65px; } }
   .hidarikikinoEren .lp-kv {
     position: relative;
     width: 100%;
     max-width: 1600px;
     padding-top: 14.933vw;
-    overflow: hidden; }
+    overflow: hidden;
+    margin: auto;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0); }
     @media screen and (min-width: 800px) {
       .hidarikikinoEren .lp-kv {
         height: 49.30556vw;
         padding-top: 5.06944vw; } }
+    @media screen and (min-width: 1600px) {
+      .hidarikikinoEren .lp-kv {
+        height: 788.88889px;
+        padding-top: 81.11111px; } }
     .hidarikikinoEren .lp-kv_characters {
       position: relative;
       display: -webkit-box;
@@ -838,16 +927,25 @@ input, select {
       height: 112.26667vw;
       margin: auto;
       -webkit-backface-visibility: hidden;
-      backface-visibility: hidden; }
+      backface-visibility: hidden;
+      -webkit-transform: translateZ(0);
+      transform: translateZ(0); }
       @media screen and (min-width: 800px) {
         .hidarikikinoEren .lp-kv_characters {
           width: 98.33333vw;
           height: 40.69444vw; } }
+      @media screen and (min-width: 1600px) {
+        .hidarikikinoEren .lp-kv_characters {
+          width: 1573.33333px;
+          height: 651.11111px; } }
     .hidarikikinoEren .lp-kv .lp-character {
       position: relative;
       height: 100%;
       width: 67.86667vw;
       overflow: hidden; }
+      @media screen and (min-width: 800px) {
+        .hidarikikinoEren .lp-kv .lp-character {
+          width: 25%; } }
       .hidarikikinoEren .lp-kv .lp-character_inner {
         position: absolute;
         left: 0;
@@ -929,6 +1027,9 @@ input, select {
       @media screen and (min-width: 800px) {
         .hidarikikinoEren .lp-kv > h1 {
           left: 4.51389vw; } }
+      @media screen and (min-width: 1600px) {
+        .hidarikikinoEren .lp-kv > h1 {
+          left: 72.22222px; } }
     .hidarikikinoEren .lp-kv_title {
       background-color: #000;
       font-size: 6.933vw;
@@ -944,6 +1045,9 @@ input, select {
       @media screen and (min-width: 800px) {
         .hidarikikinoEren .lp-kv_title {
           font-size: 3.125vw; } }
+      @media screen and (min-width: 1600px) {
+        .hidarikikinoEren .lp-kv_title {
+          font-size: 50px; } }
     .hidarikikinoEren .lp-kv_name {
       position: absolute;
       width: 70vw;
@@ -958,6 +1062,11 @@ input, select {
           bottom: 0;
           left: auto;
           right: 4.51389vw; } }
+      @media screen and (min-width: 1600px) {
+        .hidarikikinoEren .lp-kv_name {
+          width: 363.88889px;
+          height: 83.33333px;
+          right: 72.22222px; } }
     .hidarikikinoEren .lp-kv .mod-title1 {
       position: relative;
       padding-bottom: 0;
@@ -1026,12 +1135,18 @@ input, select {
       @media screen and (min-width: 800px) {
         .hidarikikinoEren .lp-kv .mod-title1 img {
           width: 2.53472vw; } }
+      @media screen and (min-width: 1600px) {
+        .hidarikikinoEren .lp-kv .mod-title1 img {
+          width: 40.55556px; } }
     .hidarikikinoEren .lp-kv .mod-title2 img {
       height: 5.6vw;
       width: auto; }
       @media screen and (min-width: 800px) {
         .hidarikikinoEren .lp-kv .mod-title2 img {
           height: 2.91667vw; } }
+      @media screen and (min-width: 1600px) {
+        .hidarikikinoEren .lp-kv .mod-title2 img {
+          height: 46.66667px; } }
   .hidarikikinoEren .lp-summery {
     position: relative;
     width: 100%;
@@ -1049,6 +1164,12 @@ input, select {
     @media screen and (min-width: 800px) and (max-width: 1100px) {
       .hidarikikinoEren .lp-summery {
         display: block; } }
+    @media screen and (min-width: 1600px) {
+      .hidarikikinoEren .lp-summery {
+        margin-top: 88.88889px;
+        padding-top: 33.33333px;
+        padding-left: 112.22222px;
+        padding-right: 72.22222px; } }
     .hidarikikinoEren .lp-summery_heading {
       position: relative;
       background-color: #deff00;
@@ -1082,6 +1203,9 @@ input, select {
           height: 451.17117px;
           background-image: url("../../../data/hidari-kikino-eren/images/summary_header_bg_l.jpg");
           background-position: 50% 50%; } }
+      @media screen and (min-width: 1600px) {
+        .hidarikikinoEren .lp-summery_heading {
+          height: 451.11111px; } }
     .hidarikikinoEren .lp-summery_headingInner {
       position: relative;
       z-index: 1;
@@ -1092,6 +1216,9 @@ input, select {
       @media screen and (min-width: 800px) and (max-width: 1100px) {
         .hidarikikinoEren .lp-summery_headingInner {
           left: 25.94595px; } }
+      @media screen and (min-width: 1600px) {
+        .hidarikikinoEren .lp-summery_headingInner {
+          left: -38.88889px; } }
     .hidarikikinoEren .lp-summery_title {
       position: absolute;
       top: -3.33333vw;
@@ -1128,6 +1255,12 @@ input, select {
           -webkit-box-pack: center;
           -ms-flex-pack: center;
           justify-content: center; } }
+      @media screen and (min-width: 1600px) {
+        .hidarikikinoEren .lp-summery_title {
+          padding: 20px 16.66667px;
+          top: -22.22222px;
+          left: 22.22222px;
+          width: 62.77778px; } }
       .hidarikikinoEren .lp-summery_title:after {
         position: relative;
         position: absolute;
@@ -1200,6 +1333,9 @@ input, select {
       @media screen and (min-width: 800px) and (max-width: 1100px) {
         .hidarikikinoEren .lp-summery_descLine {
           font-size: 1.40541vw; } }
+      @media screen and (min-width: 1600px) {
+        .hidarikikinoEren .lp-summery_descLine {
+          font-size: 14.44444px; } }
       .hidarikikinoEren .lp-summery_descLine:after {
         position: absolute;
         left: 0;
@@ -1293,6 +1429,9 @@ input, select {
       @media screen and (min-width: 800px) and (max-width: 1100px) {
         .hidarikikinoEren .lp-summery_relationship {
           width: 100%; } }
+      @media screen and (min-width: 1600px) {
+        .hidarikikinoEren .lp-summery_relationship {
+          top: 43.33333px; } }
       .hidarikikinoEren .lp-summery_relationship:before {
         content: "";
         display: block;
@@ -1316,6 +1455,11 @@ input, select {
       .hidarikikinoEren .lp-story {
         margin-top: 9.375vw;
         padding-top: 2.08333vw; } }
+    @media screen and (min-width: 1600px) {
+      .hidarikikinoEren .lp-story {
+        font-size: 34.44444px;
+        margin-top: 150px;
+        padding-top: 33.33333px; } }
     .hidarikikinoEren .lp-story_inner {
       background-image: url("../../../data/hidari-kikino-eren/images/story_pattern.jpg");
       background-repeat: repeat;
@@ -1330,6 +1474,9 @@ input, select {
       @media screen and (min-width: 800px) {
         .hidarikikinoEren .lp-story_tabs {
           height: 6.66667vw; } }
+      @media screen and (min-width: 1600px) {
+        .hidarikikinoEren .lp-story_tabs {
+          height: 106.66667px; } }
       .hidarikikinoEren .lp-story_tabs:before, .hidarikikinoEren .lp-story_tabs:after {
         content: "";
         height: 100%;
@@ -1343,6 +1490,9 @@ input, select {
         @media screen and (min-width: 800px) {
           .hidarikikinoEren .lp-story_tabs:before, .hidarikikinoEren .lp-story_tabs:after {
             border-width: .20833vw; } }
+        @media screen and (min-width: 1600px) {
+          .hidarikikinoEren .lp-story_tabs:before, .hidarikikinoEren .lp-story_tabs:after {
+            border-width: 3.33333px; } }
       .hidarikikinoEren .lp-story_tabs:before {
         left: 0; }
       .hidarikikinoEren .lp-story_tabs:after {
@@ -1372,6 +1522,10 @@ input, select {
           width: 44.44444vw;
           padding: .41667vw .41667vw 0;
           cursor: pointer; } }
+      @media screen and (min-width: 1600px) {
+        .hidarikikinoEren .lp-story_tab {
+          width: 711.11111px;
+          padding: 6.66667px 6.66667px 0; } }
       @media screen and (min-width: 800px) {
         .hidarikikinoEren .lp-story_tab:hover .tab_inner > span {
           color: #e50013; } }
@@ -1381,12 +1535,18 @@ input, select {
           .hidarikikinoEren .lp-story_tab:nth-child(1) {
             left: auto;
             right: calc(50% + 1.04167vw); } }
+        @media screen and (min-width: 1600px) {
+          .hidarikikinoEren .lp-story_tab:nth-child(1) {
+            right: calc(50% + 16.66667px); } }
       .hidarikikinoEren .lp-story_tab:nth-child(2) {
         right: 4vw; }
         @media screen and (min-width: 800px) {
           .hidarikikinoEren .lp-story_tab:nth-child(2) {
             right: auto;
             left: calc(50% + 1.04167vw); } }
+        @media screen and (min-width: 1600px) {
+          .hidarikikinoEren .lp-story_tab:nth-child(2) {
+            left: calc(50% + 16.66667px); } }
       .hidarikikinoEren .lp-story_tab:after {
         content: "";
         width: 100%;
@@ -1398,6 +1558,9 @@ input, select {
         @media screen and (min-width: 800px) {
           .hidarikikinoEren .lp-story_tab:after {
             height: .20833vw; } }
+        @media screen and (min-width: 1600px) {
+          .hidarikikinoEren .lp-story_tab:after {
+            height: 3.33333px; } }
     .hidarikikinoEren .lp-story_tab.is-active {
       background-color: transparent;
       border-left-style: solid;
@@ -1411,6 +1574,9 @@ input, select {
         .hidarikikinoEren .lp-story_tab.is-active {
           border-width: .20833vw;
           cursor: default; } }
+      @media screen and (min-width: 1600px) {
+        .hidarikikinoEren .lp-story_tab.is-active {
+          border-width: 3.33333px; } }
       .hidarikikinoEren .lp-story_tab.is-active:after {
         opacity: 0; }
       .hidarikikinoEren .lp-story_tab.is-active .tab_inner {
@@ -1418,6 +1584,9 @@ input, select {
         @media screen and (min-width: 800px) {
           .hidarikikinoEren .lp-story_tab.is-active .tab_inner {
             border-width: .06944vw; } }
+        @media screen and (min-width: 1600px) {
+          .hidarikikinoEren .lp-story_tab.is-active .tab_inner {
+            border-width: 1.11111px; } }
       .hidarikikinoEren .lp-story_tab.is-active .tab_inner span {
         color: #deff00; }
     .hidarikikinoEren .lp-story_tab.mod-bottomTab.is-active {
@@ -1434,6 +1603,9 @@ input, select {
       @media screen and (min-width: 800px) {
         .hidarikikinoEren .lp-story_label {
           font-size: 1.80556vw; } }
+      @media screen and (min-width: 1600px) {
+        .hidarikikinoEren .lp-story_label {
+          font-size: 28.88889px; } }
       .hidarikikinoEren .lp-story_label > span {
         font-size: 58%;
         line-height: 1.4;
@@ -1513,6 +1685,9 @@ input, select {
         width: auto;
         right: calc(50% + 45.48611vw);
         left: 0; } }
+    @media screen and (min-width: 1600px) {
+      .hidarikikinoEren .lp-story.is-prologue .lp-story_tabs:before {
+        right: calc(50% + 727.77778px); } }
   .hidarikikinoEren .lp-story.is-prologue .lp-story_tabs:after {
     width: 50.66667vw; }
     @media screen and (min-width: 800px) {
@@ -1520,6 +1695,9 @@ input, select {
         width: auto;
         left: calc(50% + -1.04167vw);
         right: 0; } }
+    @media screen and (min-width: 1600px) {
+      .hidarikikinoEren .lp-story.is-prologue .lp-story_tabs:after {
+        left: calc(50% + -16.66667px); } }
   .hidarikikinoEren .lp-story.is-main .lp-story_tabs:before {
     width: 50.66667vw; }
     @media screen and (min-width: 800px) {
@@ -1527,6 +1705,9 @@ input, select {
         width: auto;
         right: calc(50% + -1.04167vw);
         left: 0; } }
+    @media screen and (min-width: 1600px) {
+      .hidarikikinoEren .lp-story.is-main .lp-story_tabs:before {
+        right: calc(50% + -16.66667px); } }
   .hidarikikinoEren .lp-story.is-main .lp-story_tabs:after {
     width: 4vw; }
     @media screen and (min-width: 800px) {
@@ -1534,6 +1715,9 @@ input, select {
         width: auto;
         left: calc(50% + 45.48611vw);
         right: 0; } }
+    @media screen and (min-width: 1600px) {
+      .hidarikikinoEren .lp-story.is-main .lp-story_tabs:after {
+        left: calc(50% + 727.77778px); } }
   .hidarikikinoEren .lp-result {
     position: relative;
     width: 100%;
@@ -2048,7 +2232,11 @@ input, select {
   transition-delay: 1s; }
   .hidarikikinoEren .lp-loading.is-loaded .lp-loading_wrap {
     -webkit-transform: translate(-50%, 0) !important;
-    transform: translate(-50%, 0) !important; }
+    transform: translate(-50%, 0) !important;
+    -webkit-transition: -webkit-transform 0.8s cubic-bezier(0.19, 1, 0.22, 1);
+    transition: -webkit-transform 0.8s cubic-bezier(0.19, 1, 0.22, 1);
+    transition: transform 0.8s cubic-bezier(0.19, 1, 0.22, 1);
+    transition: transform 0.8s cubic-bezier(0.19, 1, 0.22, 1), -webkit-transform 0.8s cubic-bezier(0.19, 1, 0.22, 1); }
   .hidarikikinoEren .lp-loading.is-loaded .lp-loading_text {
     opacity: 0; }
 
