--- a/dev/web/src/sass/hidari-kikino-eren/_animation.scss
+++ b/dev/web/src/sass/hidari-kikino-eren/_animation.scss
@@ -7,6 +7,7 @@
 
     .lp-loading_wrap {
       transform: translate(-50%, 0) !important;
+      transition: transform .8s cubic-bezier(.19,1,.22,1);
     }
 
     .lp-loading_text {
